trying to fix that it is visible again

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,20 @@
 @import url("https://use.typekit.net/kcp6dya.css");
 
 /*--------------------------------------------------------------
+# Custom Made
+--------------------------------------------------------------*/
+
+.motherdaughtercol {
+	display: flex;
+  justify-content: center;
+	align-items: center;
+}
+
+.sliderimg {
+	padding-top: 100px;
+}
+
+/*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
 :root {
@@ -26,14 +40,29 @@ body {
   background-color: #Fafded;
 }
 
+p {
+	font-family: "hind", sans-serif !important;
+	font-weight: 400;
+	font-style: normal;
+	font-color: #040403;
+}
+
 a {
   color: #9f4a54;
   text-decoration: none;
+	font-family: "hind", sans-serif !important;
+	font-weight: 400;
+	font-style: normal;
+	font-color: #040403;
 }
 
 a:hover {
   color: #f4afb4 ;
   text-decoration: none;
+	font-family: "hind", sans-serif !important;
+	font-weight: 400;
+	font-style: normal;
+	font-color: #040403;
 }
 
 h1,
@@ -139,6 +168,7 @@ section {
   transition: all 0.5s;
   z-index: 997;
   background: #e78b73;
+	
 }
 
 .header.sticked {
@@ -155,63 +185,6 @@ section {
   font-weight: 700;
   color: var(--color-default);
   font-family: var(--font-primary);
-}
-
-.search-form-wrap {
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 9;
-  transition: 0.3s all ease;
-  visibility: hidden;
-  opacity: 0;
-}
-
-.search-form-wrap .search-form {
-  position: relative;
-}
-
-.search-form-wrap .search-form .form-control {
-  width: 300px;
-  border: none;
-  box-shadow: 0 15px 20px -10px rgba(var(--color-black-rgb), 0.1);
-  padding-left: 40px;
-  padding-right: 40px;
-}
-
-.search-form-wrap .search-form .form-control:active,
-.search-form-wrap .search-form .form-control:focus {
-  outline: none;
-  box-shadow: none;
-}
-
-.search-form-wrap .search-form .icon {
-  position: absolute;
-  left: 0;
-  top: 7px;
-  opacity: 0.5;
-  left: 10px;
-}
-
-.search-form-wrap .search-form .btn {
-  position: absolute;
-  top: 2px;
-  right: 4px;
-  padding: 0;
-  margin: 0;
-  line-height: 1;
-  font-size: 30px;
-}
-
-.search-form-wrap .search-form .btn:active,
-.search-form-wrap .search-form .btn:focus {
-  outline: none;
-  box-shadow: none;
-}
-
-.search-form-wrap.active {
-  visibility: visible;
-  opacity: 1;
 }
 
 section {
@@ -473,7 +446,6 @@ section {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
-  font-weight: 500;
 }
 
 .post-entry-1 h2 a {
@@ -661,7 +633,6 @@ section {
   position: relative;
   z-index: 2;
   max-width: 700px;
-  position: relative;
   padding-left: 100px;
   padding-right: 100px;
   margin-bottom: 50px;
@@ -1204,9 +1175,9 @@ section {
 --------------------------------------------------------------*/
 .footer {
   overflow: hidden;
-  background: rgba(var(--color-black-rgb), 0.9);
+  background: #9f4a54;
   font-size: 16px;
-  color: rgba(var(--color-white-rgb), 0.7);
+  color: #fafded;
 }
 
 .footer .footer-content {
@@ -1214,7 +1185,7 @@ section {
 }
 
 .footer a.footer-link-more {
-  color: rgba(var(--color-white-rgb), 0.7);
+  color: #fafded;
   display: inline-block;
   position: relative;
 }
@@ -1226,15 +1197,15 @@ section {
   left: 0;
   right: 0;
   height: 1px;
-  background: var(--color-white);
+  background: #fafded;
 }
 
 .footer a.footer-link-more:hover {
-  color: rgba(var(--color-white-rgb), 1);
+  color: #fafded;
 }
 
 .footer .footer-heading {
-  color: var(--color-white);
+  color: #fafded;
   margin-bottom: 20px;
   padding-bottom: 10px;
   font-size: 18px;
@@ -1249,9 +1220,7 @@ section {
   font-size: 10px;
   letter-spacing: 0.07rem;
   text-transform: uppercase;
-  font-weight: 400;
-  font-family: var(--font-secondary);
-  color: rgba(var(--color-white-rgb), 0.4);
+  color: #fafded;
   margin-bottom: 0px;
 }
 
@@ -1265,16 +1234,16 @@ section {
 }
 
 .footer .footer-links li a {
-  color: rgba(var(--color-white-rgb), 0.7);
+  color: #fafded;
 }
 
 .footer .footer-links li a:hover,
 .footer .footer-links li a:focus {
-  color: rgba(var(--color-white-rgb), 1);
+  color: #fafded;
 }
 
 .footer .footer-legal {
-  background: var(--color-black);
+  background: #040403;
   padding: 40px 0;
 }
 
@@ -1283,14 +1252,14 @@ section {
   display: inline-block;
   width: 40px;
   height: 40px;
-  background-color: rgba(var(--color-white-rgb), 0.09);
+  background-color: #33342F; 
   border-radius: 50%;
-  color: var(--color-white);
+  color: #fafded;
   line-height: 40px;
 }
 
 .footer .footer-legal .social-links a:hover {
-  background-color: rgba(var(--color-white-rgb), 0.2);
+  background-color: #A2A499;
 }
 
 .footer .copyright strong {
@@ -1303,5 +1272,5 @@ section {
 }
 
 .footer .credits a {
-  color: var(--color-white);
+  color: #fafded;
 }
